# thermostat

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  bm.c  bm.h  lwipopts.h  main.c  onboard_temperature.c  onboard_temperature.h  picow_ntp_client.c  picow_ntp_client.h
src/UC8151c/: UC8151c.c  UC8151c.h
src/fonts/: BMSPA_font.xbm  BMplain_font.xbm  font.xbm
src/fs/: data.ssi  index.html
tools/: makefsdata
